fix logo scrolling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,10 +153,10 @@
 
   @keyframes scroll-centered {
     0% {
-      transform: translateX(-25%);
+      transform: translateX(0);
     }
     100% {
-      transform: translateX(-75%);
+      transform: translateX(-33.333%);
     }
   }
 
